# ChangeLog for media-plugins/gst-plugins-oss
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-oss/ChangeLog,v 1.187 2012/05/12 18:13:58 aballier Exp $

  12 May 2012; Alexis Ballier <aballier@gentoo.org>
  gst-plugins-oss-0.10.30.ebuild:
  keyword ~amd64-fbsd

  15 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org>
  gst-plugins-oss-0.10.30.ebuild:
  ppc/ppc64 stable wrt #382225

  11 Oct 2011; Jeroen Roovers <jer@gentoo.org> gst-plugins-oss-0.10.30.ebuild:
  Stable for HPPA (bug #382225).

  09 Oct 2011; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-oss-0.10.30.ebuild:
  alpha/ia64/sh/sparc stable wrt #382225

  03 Oct 2011; Markus Meier <maekke@gentoo.org> gst-plugins-oss-0.10.30.ebuild:
  arm stable, bug #382225

  25 Sep 2011; Tony Vroon <chainsaw@gentoo.org> gst-plugins-oss-0.10.30.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo &
  Tomáš "Mepho" Pružina in bug #382225.

  20 Sep 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gst-plugins-oss-0.10.30.ebuild:
  x86 stable wrt bug #382225

*gst-plugins-oss-0.10.30 (31 Jul 2011)

  31 Jul 2011; Mart Raudsepp <leio@gentoo.org>
  +gst-plugins-oss-0.10.30.ebuild:
  Version bump to be in sync with the rest; no code changes

  25 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  gst-plugins-oss-0.10.28.ebuild:
  ppc/ppc64 stable wrt #368281

  09 Jun 2011; Jeroen Roovers <jer@gentoo.org> gst-plugins-oss-0.10.28.ebuild:
  Stable for HPPA (bug #368281).

  05 Jun 2011; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-oss-0.10.28.ebuild:
  alpha/ia64/sh/sparc stable wrt #368281

  05 Jun 2011; Markus Meier <maekke@gentoo.org> gst-plugins-oss-0.10.28.ebuild:
  arm stable, bug #368281

  23 May 2011; Markos Chandras <hwoarang@gentoo.org>
  gst-plugins-oss-0.10.28.ebuild:
  Stable on amd64 wrt bug #368281

  23 May 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gst-plugins-oss-0.10.28.ebuild: