@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/gst-plugins-oss
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-oss/ChangeLog,v 1.187 2012/05/12 18:13:58 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-oss/ChangeLog,v 1.188 2012/10/23 07:57:04 tetromino Exp $
+
+*gst-plugins-oss-0.10.31 (23 Oct 2012)
+
+  23 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  +gst-plugins-oss-0.10.31.ebuild:
+  Bump, fixes a memory leak.
 
   12 May 2012; Alexis Ballier <aballier@gentoo.org>
   gst-plugins-oss-0.10.30.ebuild:
